# am-discord-rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yaml  lint.yaml.bak
src/: app.rs  main.rs  media.rs  session.rs
