[package]
name = "am-discord-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
rpcdiscord = "0.2.6"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
windows = { version = "0.62.2", features = [ "Media_Control", "Media_Playback"] }
